# sol-token-mill

./: .env.example  Anchor.toml  Cargo.toml  LICENSE  README.md  bun.lockb  package.json  tsconfig.json
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs
crates/test-utils/src/joelana_env/: mod.rs
crates/test-utils/src/joelana_env/actions/: mod.rs  token_mill.rs
crates/test-utils/src/joevm_env/: mod.rs
crates/test-utils/src/joevm_env/bindings/: ERC20.json  TMERC20.json  TMFactory.json  TMMarket.json  TMStaking.json
crates/test-utils/src/joevm_env/modules/: mod.rs  token_mill.rs  tokens.rs
crates/test-utils/src/utils/token_mill/: constants.rs  curve_generator.rs  mod.rs
crates/tm-jupiter-adapter/: Cargo.toml
crates/tm-jupiter-adapter/src/: lib.rs
programs/token-mill/: Cargo.toml
programs/token-mill/src/: constant.rs  errors.rs  events.rs  lib.rs
programs/token-mill/src/instructions/: create_market.rs  create_market_with_spl.rs  mod.rs  swap.rs
programs/token-mill/src/instructions/admin/: accept_config_ownership.rs  create_config.rs  create_quote_asset_badge.rs  transfer_config_ownership.rs  update_default_fee_shares.rs  update_protocol_fee_recipient.rs  update_quote_asset_badge.rs
programs/token-mill/src/instructions/creator/: claim_creator_fees.rs  set_market_prices.rs  update_creator.rs  update_market_fee_shares.rs
programs/token-mill/src/instructions/referrals/: claim_referral_fees.rs  create_referral_account.rs
programs/token-mill/src/instructions/staking/: claim_staking_rewards.rs  create_stake_position.rs  create_staking.rs  deposit.rs  withdraw.rs
programs/token-mill/src/instructions/vesting/: create_vesting_plan.rs  release.rs
programs/token-mill/src/manager/: mod.rs  staking_manager.rs  swap_manager.rs  token_manager.rs
programs/token-mill/src/math/: mod.rs
programs/token-mill/src/state/: config.rs  market.rs  mod.rs  quote_token_badge.rs  referral.rs  staking.rs  vesting.rs
programs/token-mill/tests/comparison_test/: evm_engine.rs  fixture.rs  main.rs  svm_engine.rs
programs/token-mill/tests/upgrades/: main.rs
scripts/: createToken.ts
scripts/testnet-actions/token-mill/: createConfig.ts  createMarket.ts  referralActions.ts  stakingActions.ts  swapActions.ts  vestingActions.ts
