[workspace]
members = ["programs/*", "crates/*"]
resolver = "2"

[workspace.dependencies]
# Anchor
anchor-lang = { version = "0.30.1", features = ["event-cpi"] }
anchor-spl = { "version" = "0.30.1", features = ["metadata"] }

# Program deps
bytemuck = { version = "1.16.1", features = ["derive", "min_const_generics"] }
ruint = "1.9.0"

# Programs
token-mill = { path = "programs/token-mill" }

# Test utils
joelana-math = { path = "crates/program-utils/math" }
joelana-tokens = { path = "crates/program-utils/tokens" }
joelana-test-utils = { path = "crates/test-utils" }

# EVM tools
revm = { version = "12.1.0", features = ["optional_balance_check"] }
alloy = { version = "0.2.0", features = ["sol-types", "dyn-abi", "json"] }

# SVM tools
solana-program = "1.18"
solana-sdk = "1.18"
litesvm = "0.2.0"
litesvm-token = { version = "0.2.1", features = ["token-2022"] }

# Jupiter adapter
jupiter-amm-interface = "0.4.5"

# Testing
proptest = "1.5.0"
rstest = "0.22.0"
anyhow = "1.0.86"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# https://github.com/anza-xyz/agave/blob/f39eab171aa620a53b5fa6fd89df550aa8c1d121/Cargo.toml#L526
[patch.crates-io.curve25519-dalek]
git = "https://github.com/anza-xyz/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"

# Another dependency patch black magic
[patch.crates-io.aes-gcm-siv]
git = "https://github.com/RustCrypto/AEADs"
rev = "6105d7a5591aefa646a95d12b5e8d3f55a9214ef"
